--- a/index.html
+++ b/index.html
@@ -322,6 +322,14 @@
         .left-container {
             flex: 0 0 auto;
         }
+        .left-container img {
+            border: 1px solid rgba(0, 0, 0, 0.5);
+            border-radius: 4px;
+            padding: 5px;
+        }
+        [data-theme="dark"] .left-container img {
+            border-color: rgba(255, 255, 255, 0.5);
+        }
         .right-container {
             flex: 1;
             margin-left: 50px;
