--- a/index.html
+++ b/index.html
@@ -325,10 +325,12 @@
         .left-container img {
             border: 1px solid rgba(0, 0, 0, 0.5);
             border-radius: 4px;
-            padding: 5px;
+            padding: 8px;
+            box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3);
         }
         [data-theme="dark"] .left-container img {
             border-color: rgba(255, 255, 255, 0.5);
+            box-shadow: 4px 4px 12px rgba(255, 255, 255, 0.3);
         }
         .right-container {
             flex: 1;
