--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
             <h2 data-i18n="projectsTitle">&#x1F4D3; Projects</h2>
                 <ol>
                     <p><li><span data-i18n="project1">A series of characteristic representation methods for high-dimensional physiological signals.</span></li></p>
-                    <p><li>&#x2B1C; <span data-i18n="project2">A series of application articles related to feature methods.</span></li></p>
-                    <p><li>&#x2B1C; <span data-i18n="project3">A model of neural networks closer to the biological brain.</span></li></p>
+                    <p><li><span data-i18n="project2">A series of application articles related to feature methods.</span></li></p>
+                    <p><li><span data-i18n="project3">A model of neural networks closer to the biological brain.</span></li></p>
                 </ol>
             </div>
     </section>
