--- a/papers.html
+++ b/papers.html
@@ -413,49 +413,49 @@
             <h2 data-i18n="papersTitle">&#x1F4F0; Papers</h2>
                 <ol>
                     <li class="paper-item">
-                        <span class="paper-title">(2026) Inter-patient electrocardiogram quality assessment using cascaded domain adaptation.</span>
+                        <span class="paper-title">Inter-patient electrocardiogram quality assessment using cascaded domain adaptation. &emsp;&emsp;(2026)</span>
                         <div class="paper-journal"><i>Biomedical Signal Processing and Control</i>, 113, 109033. &emsp;&gt;&gt;&gt;&emsp; IF=4.9</div>
                         <div class="paper-authors">Li, H., Han, J., <span class="highlight-author">Zhang, X.</span>, Liu, Y., Xing, K., & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1016/j.bspc.2025.109033">https://doi.org/10.1016/j.bspc.2025.109033</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2025) EMCNN: Fine-Grained Emotion Recognition based on PPG using Multi-scale Convolutional Neural Network.</span>
+                        <span class="paper-title">EMCNN: Fine-Grained Emotion Recognition based on PPG using Multi-scale Convolutional Neural Network. &emsp;&emsp;(2025)</span>
                         <div class="paper-journal"><i>Biomedical Signal Processing and Control</i>, 105, 107594. &emsp;&gt;&gt;&gt;&emsp; IF=4.9</div>
                         <div class="paper-authors">Han, J., Li, H., <span class="highlight-author">Zhang, X.</span>, Zhang, Y., & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1016/j.bspc.2025.107594">https://doi.org/10.1016/j.bspc.2025.107594</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2024) A high altitude respiration and SpO2 dataset for assessing the human response to hypoxia.</span>
+                        <span class="paper-title">A high altitude respiration and SpO2 dataset for assessing the human response to hypoxia. &emsp;&emsp;(2024)</span>
                         <div class="paper-journal"><i>Scientific Data</i>, 11(1), 248. &emsp;&gt;&gt;&gt;&emsp; IF=6.9</div>
                         <div class="paper-authors"><span class="highlight-author">Zhang, X.</span>, Zhang, Y.<sup>*</sup>, Si, Y., Gao, N., Zhang, H., & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1038/s41597-024-03065-x">https://doi.org/10.1038/s41597-024-03065-x</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2024) Universal strategy for rapid design and analysis of gas detection peptide chips with positional preference.</span>
+                        <span class="paper-title">Universal strategy for rapid design and analysis of gas detection peptide chips with positional preference. &emsp;&emsp;(2024)</span>
                         <div class="paper-journal"><i>Sensing and Bio-Sensing Research</i>, 46, 100697. &emsp;&gt;&gt;&gt;&emsp; IF=4.9</div>
                         <div class="paper-authors">Zhang, H.<sup>&dagger;</sup>, <span class="highlight-author">Zhang, X.<sup>&dagger;</sup></span>, Si, Y., Li, H., Han, J., Yang, C., & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1016/j.sbsr.2024.100697">https://doi.org/10.1016/j.sbsr.2024.100697</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2024) A finer-grained high altitude EEG dataset for hypoxia levels assessment.</span>
+                        <span class="paper-title">A finer-grained high altitude EEG dataset for hypoxia levels assessment. &emsp;&emsp;(2024)</span>
                         <div class="paper-journal"><i>Scientific Data</i>, 11(1), 1352. &emsp;&gt;&gt;&gt;&emsp; IF=6.9</div>
                         <div class="paper-authors">Si, Y., Zhang, Y.<sup>*</sup>, <span class="highlight-author">Zhang, X.<sup>*</sup></span>, Liu, S., Zhang, H., & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1038/s41597-024-04102-5">https://doi.org/10.1038/s41597-024-04102-5</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2024) Clinical knowledge-based ECG abnormalities detection using dual-view CNN-Transformer and external attention mechanism.</span>
+                        <span class="paper-title">Clinical knowledge-based ECG abnormalities detection using dual-view CNN-Transformer and external attention mechanism. &emsp;&emsp;(2024)</span>
                         <div class="paper-journal"><i>Computers in Biology and Medicine</i>, 178, 108751. &emsp;&gt;&gt;&gt;&emsp; IF=6.3</div>
                         <div class="paper-authors">Li, H.<sup>&dagger;</sup>, Han, J.<sup>&dagger;</sup>, Zhang, H., <span class="highlight-author">Zhang, X.</span>, Si, Y., Zhang, Y., Liu, Y., & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1016/j.compbiomed.2024.108751">https://doi.org/10.1016/j.compbiomed.2024.108751</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2023) The spatiotemporal heterogeneity of the biophysical microenvironment during hematopoietic stem cell development: from embryo to adult.</span>
+                        <span class="paper-title">The spatiotemporal heterogeneity of the biophysical microenvironment during hematopoietic stem cell development: from embryo to adult. &emsp;&emsp;(2023)</span>
                         <div class="paper-journal"><i>Stem Cell Research & Therapy</i>, 14(1), 251. &emsp;&gt;&gt;&gt;&emsp; IF=7.3</div>
                         <div class="paper-authors">Shi, G., Zhang, P., <span class="highlight-author">Zhang, X.</span>, Li, J., Zheng, X., Yan, J., ... & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1186/s13287-023-03464-8">https://doi.org/10.1186/s13287-023-03464-8</a></div>
                     </li>
                     <li class="paper-item">
-                        <span class="paper-title">(2020) miRNA‐mediated macrophage behaviors responding to matrix stiffness and ox‐LDL.</span>
+                        <span class="paper-title">miRNA‐mediated macrophage behaviors responding to matrix stiffness and ox‐LDL. &emsp;&emsp;(2020)</span>
                         <div class="paper-journal"><i>Journal of Cellular Physiology</i>, 235(9), 6139-6153. &emsp;&gt;&gt;&gt;&emsp; IF=4.0</div>
                         <div class="paper-authors">Li, J., Wang, S., Li, Y., Zhang, N., Gribskov, M., <span class="highlight-author">Zhang, X.</span>, ... & Yang, H.<sup>*</sup></div>
                         <div class="paper-doi"><a href="https://doi.org/10.1002/jcp.29543">https://doi.org/10.1002/jcp.29543</a></div>
