--- a/papers.html
+++ b/papers.html
@@ -491,6 +491,7 @@
             <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> &emsp; © <span id="currentYear"></span>
         </div>
     </footer>
+    <script src="themes.js"></script>
     <script src="langs.js"></script>
 </body>
 </html>
