--- a/projects.html
+++ b/projects.html
@@ -415,7 +415,6 @@
             <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> &emsp; © <span id="currentYear"></span>
         </div>
     </footer>
-    <script src="themes.js"></script>
-    <script src="langs.js"></script>
+    <script src="settings.js"></script>
 </body>
 </html>
