update research plan

--- a/index.html
+++ b/index.html
@@ -513,12 +513,45 @@
                         <div class="paper-authors"><span data-i18n="reviewDate">Date:</span> 2025 &emsp;|&emsp; <span data-i18n="reviewRole">Role:</span> <span data-i18n="reviewer">Reviewer</span> &emsp;|&emsp; <span data-i18n="reviewTaskId">Task ID:</span> 0f1b8845-c81c-48b4-b414-54961ea759f7</div>
                     </li>
                 </ol>
-            <h2 data-i18n="projectsTitle">&#x1F4D3; Projects</h2>
-                <ol>
-                    <p><li><span data-i18n="project1">A series of characteristic representation methods for high-dimensional physiological signals.</span></li></p>
-                    <p><li><span data-i18n="project2">A series of application articles related to feature methods.</span></li></p>
-                    <p><li><span data-i18n="project3">A model of neural networks closer to the biological brain.</span></li></p>
-                </ol>
+            <h2 data-i18n="researchPlanTitle">&#x1F4D3; Research Plans</h2>
+            <ol>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="rp1Title">Hypoxia State Prediction Model Based on Mirror Feature Curve (MFC) and Attractor Algorithm</span>
+                    <div class="paper-authors" data-i18n="rp1Desc">Developing a novel predictive framework that leverages mirror feature curves extracted from physiological signals combined with attractor-based dynamical systems analysis to forecast hypoxic episodes in high-altitude environments.</div>
+                </li>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="rp2Title">Hypoxia State Prediction Based on MFC and Manifold Convolution Algorithm</span>
+                    <div class="paper-authors" data-i18n="rp2Desc">Integrating mirror feature curve representations with manifold-aware convolutional neural networks to capture the intrinsic geometric structure of physiological data for improved hypoxia classification and prediction.</div>
+                </li>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="rp3Title">Hypoxia Event Modeling and Prediction Based on Graph Neural Networks</span>
+                    <div class="paper-authors" data-i18n="rp3Desc">Constructing graph-based representations of multi-channel physiological signals to model inter-channel dependencies and temporal dynamics for comprehensive hypoxia event detection and forecasting.</div>
+                </li>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="rp4Title">All-Optical Closed-Loop Brain-Computer Interface Based on TCN and Attractor Algorithm</span>
+                    <div class="paper-authors" data-i18n="rp4Desc">Designing a fully optical brain-computer interface system utilizing temporal convolutional networks and attractor dynamics for real-time neural signal decoding and closed-loop neuromodulation.</div>
+                </li>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="rp5Title">Dimensional Game Guide: Low-Dimensional Dynamics Modeling for Brain-Computer Interfaces</span>
+                    <div class="paper-authors" data-i18n="rp5Desc">Exploring low-dimensional manifold representations of neural population activity to develop interpretable and efficient decoding algorithms for next-generation brain-computer interfaces.</div>
+                </li>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="rp6Title">Physics-Informed Neural Decoding: Synthetic-to-Real Domain Transfer</span>
+                    <div class="paper-authors" data-i18n="rp6Desc">Leveraging physics-informed neural networks to bridge the gap between synthetic training data and real neural recordings, enabling robust cross-domain generalization in neural decoding tasks.</div>
+                </li>
+            </ol>
+
+            <h2 data-i18n="collabTitle">&#x1F91D; Potential Collaboration Directions</h2>
+            <ol>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="collab1Title">Optogenetic CAR-T Therapy (Opto-Immunotherapy)</span>
+                    <div class="paper-authors" data-i18n="collab1Desc">The major limitations of conventional CAR-T therapy are cytokine release syndrome (CRS) and off-target toxicity. By implementing NIR light-controlled CAR expression or IL-15/IL-12 release modulation, immediate light-off intervention becomes possible upon early CRS indicators (e.g., fever onset), providing a reversible safety mechanism with life-saving potential.</div>
+                </li>
+                <li class="paper-item">
+                    <span class="paper-title" data-i18n="collab2Title">Optogenetic Epigenetic Regulation (Opto-Epigenetics)</span>
+                    <div class="paper-authors" data-i18n="collab2Desc">Unlike direct DNA editing, epigenetic modulation offers reversible control—gene expression recovers upon light cessation. This enables researchers to fine-tune oncogene expression levels like adjusting a volume dial, observe tumor drug resistance responses, and identify dynamic equilibrium points. This approach aligns well with real-time deep learning training paradigms.</div>
+                </li>
+            </ol>
             </div>
     </section>
     <footer class="footer">
